chore(playground): increase font size and gutter width

--- a/playground/styles/main.less
+++ b/playground/styles/main.less
@@ -14,20 +14,19 @@ body {
   height: 100%;
   border: 0;
   width: 100%;
-  line-height: 25px;
-  font-size: 16px;
+  line-height: 1.5;
+  font-size: 2rem;
   font-family: Consolas, Monaco, monospace;
   opacity: 1;
   transition: opacity 0.3s;
 }
 
+.CodeMirror .CodeMirror-gutters {
+  width: 50px;
+}
+
 .CodeMirror .CodeMirror-linenumber {
   color: #d4cebd;
-  padding-left: 12px;
-}
-.canvas-mode .CodeMirror {
-  opacity: 0;
-  transition: opacity 1s;
 }
 
 .error {
