--- a/playground/styles/main.less
+++ b/playground/styles/main.less
@@ -9,13 +9,19 @@ body {
   overflow-x: hidden;
   margin: 0;
 }
+#output {
+  position: absolute;
+  right: 50px;
+  bottom: 50px;
+}
 
 .CodeMirror {
   height: 100%;
   border: 0;
   width: 100%;
   line-height: 1.5;
-  font-size: 2rem;
+  font-size: 2.5rem;
+  font-weight: 600;
   font-family: Consolas, Monaco, monospace;
   opacity: 1;
   transition: opacity 0.3s;
