--- a/playground/styles/main.less
+++ b/playground/styles/main.less
@@ -3,12 +3,68 @@ body {
   height: 100%;
 }
 
+a {
+  opacity: 0.7;
+  text-decoration: none;
+  color: #d32f2f;
+}
+
 body {
   padding: 0;
   overflow-y: hidden;
   overflow-x: hidden;
   margin: 0;
 }
+
+.tooltip {
+  background: #ffc107;
+  color: black;
+  // width: 300px;
+  border-radius: 3px;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+  padding: 10px;
+  text-align: center;
+}
+
+.tooltip {
+  position: absolute;
+  background: #ffc107;
+  color: black;
+  border-radius: 3px;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+  padding: 10px;
+  text-align: center;
+}
+
+.tooltip .tooltip-arrow {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  position: absolute;
+  margin: 5px;
+}
+
+.tooltip .tooltip-arrow,
+.popper .popper__arrow {
+  border-color: #ffc107;
+}
+
+.popper[x-placement^="top"],
+.tooltip[x-placement^="top"] {
+  margin-bottom: 5px;
+}
+.popper[x-placement^="top"] .popper__arrow,
+.tooltip[x-placement^="top"] .tooltip-arrow {
+  border-width: 5px 5px 0 5px;
+  border-left-color: transparent;
+  border-right-color: transparent;
+  border-bottom-color: transparent;
+  bottom: -5px;
+  left: calc(50% - 5px);
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 #output {
   position: absolute;
   right: 50px;
@@ -17,9 +73,33 @@ body {
 
   img {
     width: 20vw;
+    cursor: pointer;
   }
 }
+.tools {
+  display: block;
+  position: absolute;
+  z-index: 4;
+  top: 20px;
+  right: 20px;
+  font-family: Calibri, Helvetica, sans-serif;
+  font-weight: bold;
+  border-radius: 5px;
 
+  .logo {
+    color: #000;
+    font-size: 150%;
+    font-weight: 600;
+  }
+  a {
+    margin-left: 5px;
+  }
+  img {
+    width: 24px;
+    height: 24px;
+    vertical-align: bottom;
+  }
+}
 .CodeMirror {
   height: 100%;
   border: 0;
@@ -48,4 +128,16 @@ body {
 
 .error-line {
   background: #d32f2f !important;
+}
+
+@media screen and (max-width: 500px) {
+  .tools {
+    position: absolute;
+    bottom: 20px;
+    top: auto;
+    left: 50px;
+  }
+  .CodeMirror {
+    font-size: 1.1rem;
+  }
 }
