chore(playground): adjust layout of tool and update editor selection color

--- a/playground/styles/3024-day.css
+++ b/playground/styles/3024-day.css
@@ -96,3 +96,8 @@
   text-decoration: underline;
   color: #a16a94 !important;
 }
+
+.CodeMirror-selected {
+  background-color: #B0ECB7 !important;
+}
+
