--- a/playground/styles/main.less
+++ b/playground/styles/main.less
@@ -19,7 +19,6 @@ body {
 .tooltip {
   background: #ffc107;
   color: black;
-  // width: 300px;
   border-radius: 3px;
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
   padding: 10px;
@@ -81,7 +80,7 @@ body {
   position: absolute;
   z-index: 4;
   top: 20px;
-  right: 20px;
+  right: 100px;
   font-family: Calibri, Helvetica, sans-serif;
   font-weight: bold;
   border-radius: 5px;
@@ -135,6 +134,7 @@ body {
     position: absolute;
     bottom: 20px;
     top: auto;
+    right: auto;
     left: 50px;
   }
   .CodeMirror {
